--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <!-- /.play-->
                 
             </div>
-            <div class="series">
+            <div class="series animated fadeInUp">
                 <div class="swiper-container">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
