--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                     <nav class="footer-menu">
                         <a href="#" class="footer-link">Политика конфеденциальности</a>
                         <a href="#" class="footer-link">Правила сервиса</a>
-                        <a href="#" class="footer-link">Лецензии</a>
+                        <a href="#" class="footer-link">Лицензии</a>
                     </nav>
                 </div>
                 <!-- /.right -->
